Fix justify-content/align-items mixup

--- a/surpass-core.css
+++ b/surpass-core.css
@@ -15,7 +15,7 @@
   position: relative;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: stretch;
+  align-items: stretch;
 }
 
 .surpass_input-container > input {
